Before rewrite of introduction

--- a/tex/references.bib
+++ b/tex/references.bib
@@ -32,6 +32,12 @@
   publisher = {Springer},
   location = {Berlin, Heidelberg},
 }
+@book{Ramsay2006,
+    author = {Ramsay},
+    title = {Functional Data Analysis},
+    year = 2006,
+    publisher = {Placeholder}
+}
 @article{SrivastavaEtAl2011,
   author = {A. {Srivastava} and E. P. {Klassen} and S. H. {Joshi} and I. H. {Jermyn}},
   title = {Shape Analysis of Elastic Curves in Euclidean Spaces},
