--- a/tex/references.bib
+++ b/tex/references.bib
@@ -13,6 +13,14 @@
   edition = 2,
   year = 2016,
 }
+@book{FahrmeierEtAl2013,
+  author = {F. {Ludwig} and T. {Kneib} and S. {Lang} and B. {Marx}},
+  title = {Regression},
+  subtitle = {Models, Methods and Applications},
+  year = 2013,
+  publisher = {Springer},
+  location = {Berlin, Heidelberg},
+}
 @article{Kendall1977, 
     author={Kendall, D. G.}, 
     title={The diffusion of shape},
@@ -24,19 +32,11 @@
     publisher={Cambridge University Press}, 
     pages={428–430}
 }
-@book{FahrmeierEtAl2013,
-  author = {F. {Ludwig} and T. {Kneib} and S. {Lang} and B. {Marx}},
-  title = {Regression},
-  subtitle = {Models, Methods and Applications},
-  year = 2013,
-  publisher = {Springer},
-  location = {Berlin, Heidelberg},
-}
-@book{Ramsay2006,
-    author = {Ramsay},
-    title = {Functional Data Analysis},
-    year = 2006,
-    publisher = {Placeholder}
+@Book{RamsaySilverman2005,
+  author       = {Ramsay, J. and Silverman, B. W.},
+  title        = {Functional Data Analysis},
+  year         = {2005},
+  series       = {Springer series in statistics}
 }
 @article{SrivastavaEtAl2011,
   author = {A. {Srivastava} and E. P. {Klassen} and S. H. {Joshi} and I. H. {Jermyn}},
@@ -54,9 +54,54 @@
   publisher = {Springer},
   location = {New York}
 }
-@article{Steyer2021,
-  author = {L. {Steyer} and A. {Stöcker} and S. {Greven}},
-  title = {Elastic Analysis of Irregularly or Sparsely Sampled Curves},
+@Article{Steyer2021,
+  author = {Steyer, L. and Stöcker, A. and Greven, S.},
+  title = {Elastic analysis of irregularly or sparsely sampled curves},
   year = 2021,
   note = {Preprint}
 }
+@Article{Stoecker2021,
+  author = {Stöcker, A and Greven, S.},
+  title = {Functional additive regression on shape and form manifolds of planar
+      curves},
+  year = 2021,
+  note = {Preprint}
+}
+@Book{Wood2017,
+    title = {Generalized Additive Models: An Introduction with R},
+    year = {2017},
+    author = {S.N Wood},
+    edition = {2},
+    publisher = {Chapman and Hall/CRC},
+  }
+@Manual{digits3,
+  author = {Anderson, C. R.},
+  title = {Object recognition using statistical shape analysis},
+  year = 1997,
+  organization = {University of Leeds},
+  note = {PhD thesis},
+} 
+@Manual{elasdics,
+  title = {elasdics: Elastic Analysis of Sparse, Dense and Irregular Curves},
+  author = {Steyer, L.},
+  year = {2021},
+  note = {R package version 0.1.1},
+  url = {https://CRAN.R-project.org/package=elasdics},
+}
+@Manual{shapes,
+  title        = {\texttt{shapes} package},
+  author       = {Dryden, I. L.},
+  organization = {R Foundation for Statistical Computing},
+  address      = {Vienna, Austria},
+  year         = {2019},
+  note         = {Contributed package, Version 1.2.5.},
+  url          = {http://www.R-project.org}
+}
+@Manual{sparseFLMM,
+    title = {sparseFLMM: Functional Linear Mixed Models for Irregularly or Sparsely
+Sampled Data},
+    author = {Cederbaum, J. and Volkmann, A. and Stöcker, A.},
+    year = {2021},
+    note = {R package version 0.4.0},
+    url = {https://CRAN.R-project.org/package=sparseFLMM},
+  }
